--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,16 +1,261 @@
+body {
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  border-bottom: 1px solid #ccc;
-  list-style-type: none;
+  background-color: #fff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .navLinks {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 1rem 2rem;
+  gap: 1rem;
   list-style-type: none;
+}
+
+.navLinks a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+.navLinks a:hover {
+  color: #F4CE14;
+}
+
+
+.hero {
+  background-color: #495E57;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 2rem;
+}
+
+.heroText {
+  gap: 1rem;
+  flex: 0 0 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.hero h1 {
+  color: #F4CE14;
+  font-size: 2rem;
+}
+
+.hero p {
+  max-width: 400px;
+}
+
+.heroImage {
+  flex: 0 0 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 400px;
+  border-radius: 16px;
+}
+
+.heroImage img {
+  width: 100%;
+  border-radius: 16px;
+  max-width: 400px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: #F4CE14;
+  color: #333;
+  border: none;
+  border-radius: 16px;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-top: 1rem;
+  transition: background-color 0.3s;
+}
+
+.btn:hover {
+  background-color: #495E57;
+  color: #fff;
+}
+
+.highlights {
+  text-align: center;
+  padding: 1rem;
+  flex: 33% 33% 33%;
+}
+
+.highlightHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+
+.highlightHeader h2 {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 400px;
+}
+
+.highlightHeader .btn {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.highlightMenu {
+  display: inline-block;
+  width: 30%;
+  background: #f0f0f0;
+  margin: 10px;
+  padding: 15px;
+}
+
+.testimonialHeader {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.testimonials {
+  text-align: center;
+  padding: 2rem;
+  background: #D9D9D9;
+}
+
+.testimonialItems {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.testimonial {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #ccc;
+  padding: 1rem;
+  border-radius: 16px;
+  text-align: center;
+  width: 200px;
+}
+
+.testimonial img {
+  border-radius: 50%;
+  margin-bottom: 1rem;
+}
+
+.testimonial h3 {
+  margin-bottom: 0.5rem;
+}
+
+.about {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem;
+  background: #f0f0f0;
+}
+
+.aboutText {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 50%;
+}
+
+.aboutImage {
+  flex: 1;
+  position: relative;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding-top: 40px;
+}
+
+.aboutImage img:first-child {
+  position: relative;
+  z-index: 1;
+  border: 5px solid #434242;
+
+}
+
+.aboutImage img:last-child {
+  position: absolute;
+  top: -20px;
+  right: -10px;
+  z-index: 2;
+  border: 5px solid #434242;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  background-color: #333;
+  color: #fff;
+}
+
+.footerContent {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1200px;
+  margin-bottom: 2rem;
+}
+
+.footerContent > div {
+  flex: 1;
+  padding: 0 1rem;
+}
+
+.footerMenu ul,
+.footerContact ul,
+.footerSocial ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footerMenu li,
+.footerContact li,
+.footerSocial li {
+  margin-bottom: 0.5rem;
+}
+
+.footerMenu a,
+.footerContact a,
+.footerSocial a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footerMenu a:hover,
+.footerContact a:hover,
+.footerSocial a:hover {
+  text-decoration: underline;
+}
+
+.footerCopy {
+  text-align: center;
 }
